# ni-slam

./: CMakeLists.txt  main.cpp  make_graph.py  package.xml
configs/: config_HD.yaml  config_HD2.yaml  config_geekplus.yaml  config_ntu.yaml
dummy_data/: camera.yaml
include/: frame.h  visualization.h  viz.hpp
results/: KCC_Keyframe.txt  optimized_keyframe.txt  optimized_keyframe2.txt  optimized_keyframe3.txt  optimized_keyframe4.txt
src/: dataset.cc  map.cc  map_builder.cc  map_stitcher.cc  utils.cc  visualization.cc  viz.cpp
